# file-extractor

./: CMakeLists.txt  README.md  client.c  client.h  generate_file.sh  key.pem  server.c  server.h
client/: client  client.c  client.h
server/: cert.pem  server  server.c  server.h
